Preparing POM for OSSRH release

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>hu.blackbelt.epsilon</groupId>
+    <parent>
+        <groupId>hu.blackbelt.epsilon</groupId>
+        <artifactId>epsilon-runtime-parent</artifactId>
+        <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../epsilon-runtime-parent</relativePath>
+    </parent>
     <artifactId>epsilon-runtime-reactor</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>epsilon-runtime-parent</module>
