--- a/epsilon-runtime-parent/pom.xml
+++ b/epsilon-runtime-parent/pom.xml
@@ -174,7 +174,7 @@
 
     <profiles>
         <profile>
-            <id>ossrh-deploy</id>
+            <id>release</id>
             <build>
                 <plugins>
                     <plugin>
@@ -202,8 +202,7 @@
                             </execution>
                         </executions>
                     </plugin>
-
-                    <!--
+<!--
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
@@ -217,12 +216,11 @@
                             </execution>
                         </executions>
                     </plugin>
-                    -->
-                    
+-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
+                        <version>1.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -230,6 +228,10 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <keyname>${gpg.keyname}</keyname>
+                                    <passphraseServerId>${gpg.keyname}</passphraseServerId>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
