--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
         <version>1.1.0-SNAPSHOT</version>
-        <relativePath>../epsilon-runtime-parent</relativePath>
+        <relativePath>epsilon-runtime-parent</relativePath>
     </parent>
     <artifactId>epsilon-runtime-reactor</artifactId>
     <packaging>pom</packaging>
