Another test. More verbose log.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
 
+cache:
+  directories:
+  - .autoconf
+  - $HOME/.m2
+
 before_install:
   - echo $GPG_SECRET_KEYS | base64 --decode | $GPG_EXECUTABLE --import
   - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
@@ -20,7 +25,7 @@ deploy:
     repo: BlackBeltTechnology/epsilon-runtime
 
 install:
-  - mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V 
+  - mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true 
 
 script: 
-  - mvn clean deploy --settings .maven.xml -DskipTests=true -B -U -Prelease
+  - mvn clean deploy --settings .maven.xml -DskipTests=true -Prelease
