--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ cache:
   - $HOME/.m2
 
 before_install:
-  - source .travis/set_release_version.sh
+  - export POJECT_BUILD_NUMBER=$(printf "%05d" $TRAVIS_BUILD_NUMBER)
+  - export PROJECT_VERSION=$(mvn help:evaluate -N -Dexpression=project.version | grep -v '\[' | sed 's/-SNAPSHOT/-b$PROJECT_BUILD_NUMBER/')
+  - mvn versions:set -DnewVersion=$PROJECT_VERSION -f ./epsilon-runtime-parent/pom.xml
+  - mvn versions:set -DnewVersion=$PROJECT_VERSION
+
 
 before_deploy:
   - .travis/setup_gpg.sh
