Moving to install

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,6 @@ cache:
   directories:
   - $HOME/.m2
 
-before_install:
-  - export POJECT_BUILD_NUMBER=$(printf "%05d" $TRAVIS_BUILD_NUMBER)
-  - export PROJECT_VERSION=$(mvn help:evaluate -N -Dexpression=project.version | grep -v '\[' | sed 's/-SNAPSHOT/-b$PROJECT_BUILD_NUMBER/')
-  - mvn versions:set -DnewVersion=$PROJECT_VERSION -f ./epsilon-runtime-parent/pom.xml
-  - mvn versions:set -DnewVersion=$PROJECT_VERSION
-
-
 before_deploy:
   - .travis/setup_gpg.sh
 
@@ -26,6 +19,10 @@ deploy:
     name: v$PROJECT_VERSION
 
 install:
+  - export POJECT_BUILD_NUMBER=$(printf "%05d" $TRAVIS_BUILD_NUMBER)
+  - export PROJECT_VERSION=$(mvn help:evaluate -N -Dexpression=project.version | grep -v '\[' | sed 's/-SNAPSHOT/-b$PROJECT_BUILD_NUMBER/')
+  - mvn versions:set -DnewVersion=$PROJECT_VERSION -f ./epsilon-runtime-parent/pom.xml
+  - mvn versions:set -DnewVersion=$PROJECT_VERSIONs
   - echo "Run Install"
   - mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true 
 
