--- a/epsilon-runtime-parent/pom.xml
+++ b/epsilon-runtime-parent/pom.xml
@@ -7,8 +7,9 @@
     <packaging>pom</packaging>
     <version>1.1.0-SNAPSHOT</version>
 
+    <name>epsilon-runtime</name>
+    <description>Eclipse Epsilon runtime for OSGi/Maven. It wraps the script calling and meta model regitration</description>
     <url>http://github.com/BlackBeltTechnology/epsilon-runtime</url>
-
     <issueManagement>
         <url>https://github.com/BlackBeltTechnology/epsilon-runtime/issues</url>
         <system>GitHub Issues</system>
@@ -175,7 +176,7 @@
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>release-central</id>
             <build>
                 <plugins>
                     <plugin>
@@ -232,6 +233,11 @@
                                 <configuration>
                                     <keyname>${gpg.keyname}</keyname>
                                     <passphraseServerId>${gpg.keyname}</passphraseServerId>
+                                    <!-- This is necessary for gpg to not try to use the pinentry programs -->
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
                                 </configuration>
                             </execution>
                         </executions>
@@ -250,5 +256,4 @@
             </distributionManagement>
         </profile>
     </profiles>
-
 </project>
