--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,48 @@
         <module>epsilon-runtime-utils</module>
         <module>epsilon-runtime-execution</module>
     </modules>
+    <profiles>
+	<profile>
+	    <id>release-github</id>
+	    <build>
+	        <plugins>
+	            <plugin>
+	                <groupId>de.jutzig</groupId>
+	                <artifactId>github-release-plugin</artifactId>
+	                <version>1.2.0</version>
+	                <configuration>
+	                    <repositoryId>https://github.com/BlackBeltTechnology/epsilon-runtime.git</repositoryId>
+	                    <description>${env.WERCKER_GIT_BRANCH} ${env.WERCKER_BUILD_ID} ${env.WERCKER_APPLICATION_URL}</description>
+	                    <releaseName>${project.version}</releaseName>
+	                    <tag>${project.version}</tag>
+	                    
+	                    <!-- If your project has additional artifacts, such as ones produced by
+	                     the maven-assembly-plugin, you can define the following
+	                     (requires version 1.1.1 of the plugin or higher): -->
+	                    <!--
+	                     <fileSets>
+	                     <fileSet>
+	                     <directory>${project.build.directory}</directory>
+	                     <includes>
+	                     <include>${project.artifactId}*.tar.gz</include>
+	                     <include>${project.artifactId}*.zip</include>
+	                     </includes>
+	                     </fileSet>
+	                     </fileSets>
+	                     -->
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <id>release-to-github</id>
+	                        <phase>install</phase>
+	                        <goals>
+	                            <goal>release</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	        </plugins>
+	    </build>	    
+	</profile>
+    </profiles>
 </project>
