--- a/wercker.yml
+++ b/wercker.yml
@@ -4,36 +4,33 @@ command-timeout: 60
 
 build:
   steps:	
-    - blackbelttechnology/import-gpg-keys@1.0.2:
-      secretkeys: $GPG_SECRET_KEYS 
-      ownertrust: $GPG_OWNERTRUST
+    - blackbelttechnology/version-from-git-tag@1.0.2	
 
-    - blackbelttechnology/version-from-git-tag@1.0.0
-
+    - blackbelttechnology/version-from-pom@1.0.2:
+      pom: epsilon-runtime-parent/pom.xml
+      
     - wercker/maven:
       goals: versions:set
       pom: ./epsilon-runtime-parent/pom.xml
-      maven_opts: -DnewVersion=$APP_VERSION
+      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}-${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}_${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
       cache_repo: true
 
     - wercker/maven:
-      goals: clean deploy
-      profiles: release
+      goals: clean install
       settings: .maven.xml
+      profiles: release-github
       cache_repo: true
-    - script:
-        name: print version
-        code: |-
-             echo "=================================================================================================================================="
-             echo "  VERSION: ${APP_VERSION}  OK"
-             echo "=================================================================================================================================="
+
+#    - github-create-release:
+#      token: $GITHUB_TOKEN
+#      tag: v1.0.0
+    
+#    - github-upload-asset:
+#      token: $GITHUB_TOKEN
+#      file: build.tgz
 
 release:
   steps:
-    - blackbelttechnology/import-gpg-keys@1.0.2:
-      secretkeys: $GPG_SECRET_KEYS 
-      ownertrust: $GPG_OWNERTRUST
-
     - blackbelttechnology/version-from-git-tag@1.0.0
 
     - script:
@@ -48,8 +45,30 @@ release:
                 exit 1
              fi
 
+    - blackbelttechnology/import-gpg-keys@1.0.2:
+      secretkeys: $GPG_SECRET_KEYS 
+      ownertrust: $GPG_OWNERTRUST
+
     - wercker/maven:
       goals: clean install
+      settings: .maven.xml
+      cache_repo: true
+
+    - blackbelttechnology/import-gpg-keys@1.0.4:
+      secretkeys: $GPG_SECRET_KEYS 
+      ownertrust: $GPG_OWNERTRUST
+
+    - blackbelttechnology/version-from-git-tag@1.0.0
+
+    - wercker/maven:
+      goals: versions:set
+      pom: ./epsilon-runtime-parent/pom.xml
+      maven_opts: -DnewVersion=$APP_VERSION
+      cache_repo: true
+
+    - wercker/maven:
+      goals: clean deploy
+      profiles: release-central
       settings: .maven.xml
       cache_repo: true
 
