--- a/wercker.yml
+++ b/wercker.yml
@@ -4,6 +4,7 @@ command-timeout: 60
 
 build:
   steps:	
+   
     - blackbelttechnology/version-from-git-tag@1.0.4
  
     - blackbelttechnology/version-from-pom@1.0.2:
@@ -12,57 +13,170 @@ build:
     - wercker/maven:
       goals: versions:set
       pom: ./epsilon-runtime-parent/pom.xml
-      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}-${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}_${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
+      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}-${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}-${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
       cache_repo: true
 
     - wercker/maven:
       goals: clean install
       settings: .maven.xml
-      profiles: release-github
+      profiles: release-github,release-blackbelt
       cache_repo: true
 
+#  after-steps:
+#    - mbrevda/github-status:
+#      token: $GITHUB_ACCESS_TOKEN
+#      context: $WERCKER_APPLICATION_NAME
+#      msg: build completed
+#      fail: an error has occurred
+#      url: $WERCKER_RUN_URL
+
+# Based on http://vincent.demeester.fr/posts/2012-07-23-maven-release-gitflow/
 release:
   steps:
-    - blackbelttechnology/version-from-git-tag@1.0.0
-
-    - script:
-        name: check consitency
-        code: |-
-             if [[ $GIT_DIRTY == true ]] ; then
-                echo "Git is dirty, canot release"
-                exit 1
-             fi
-             if [[ $MAKE_RELEASE != true ]] ; then
-                echo "Only release version can be deployed"
-                exit 1
-             fi
-             
-    - wercker/maven:
-      goals: clean install
-      settings: .maven.xml
-      cache_repo: true
-
     - blackbelttechnology/import-gpg-keys@1.0.4:
       secretkeys: $GPG_SECRET_KEYS 
       ownertrust: $GPG_OWNERTRUST
 
-    - blackbelttechnology/version-from-git-tag@1.0.3
+# Github for SSH access
+#    - add-to-known_hosts:
+#      hostname: github.com
+#      fingerprint: $GITHUB_RSA_FINGERPRINT
+#      type: rsa
+#    - add-ssh-key:
+#      keyname: GITHUB_SSH_KEY
 
+    - script:
+        name: set git remote origis
+        code: |-
+             git remote set-url origin https://$GITHUB_ACCESS_TOKEN@github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY.git
+             git fetch origin
+
+    - script:
+        name: display branches
+        code: |-
+             git branch -a
+             git branch -r
+
+
+    - script:
+        name: setup git for maven
+        code: |-
+             git config --global user.email "oss@blackbelt.hu"
+             git config --global user.name "Wercker Release"
+    
+    - blackbelttechnology/version-from-git-tag@1.0.0
+
+    - script:
+        name: reset git state to actual commit
+        code: |-
+             git reset --hard $WERCKER_GIT_COMMIT
+
+    - script:
+        name: create barnch for builder
+        code: |-
+             git branch wercker_$WERCKER_RUN_ID
+
+    - blackbelttechnology/version-from-pom@1.0.2:
+       pom: epsilon-runtime-parent/pom.xml
+
+    - script:
+        name: create release branch from current commit
+        code: |-
+             git checkout -b release/v$VERSION_FROM_POM_BASE_VERSION wercker_$WERCKER_RUN_ID
+
+## Deploy using release plugin
+#    - wercker/maven:
+#      goals: release:prepare
+#      settings: .maven.xml
+#      profiles: release-blackbelt
+#      cache_repo: true
+#
+#    - wercker/maven:
+#      goals: release:perform
+#      settings: .maven.xml
+#      profiles: release-blackbelt
+#      cache_repo: true
+
+# Set version and deploy with steps
     - wercker/maven:
       goals: versions:set
       pom: ./epsilon-runtime-parent/pom.xml
-      maven_opts: -DnewVersion=$APP_VERSION
+      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION} -DgenerateBackupPoms=false
+      settings: .maven.xml
+      profiles: release-github,release-blackbelt
       cache_repo: true
 
     - wercker/maven:
       goals: clean deploy
-      profiles: release-central
       settings: .maven.xml
+      profiles: release-blackbelt
       cache_repo: true
 
     - script:
-        name: print version
+        name: commit the release
         code: |-
-             echo "=================================================================================================================================="
-             echo "  RELEASE VERSION: ${APP_VERSION}  OK"
-             echo "=================================================================================================================================="
+             git add .
+             git commit -m "Release v$VERSION_FROM_POM_BASE_VERSION"
+
+    - script:
+        name: tag release branch
+        code: |-
+             git tag -a v$VERSION_FROM_POM_BASE_VERSION -m "Release v$VERSION_FROM_POM_BASE_VERSION"
+
+    - script:
+        name: increase version number
+        code: "mvn build-helper:parse-version versions:set -DnewVersion=\\${parsedVersion.majorVersion}.\\${parsedVersion.minorVersion}.\\${parsedVersion.nextIncrementalVersion}-SNAPSHOT -DgenerateBackupPoms=false -f ./epsilon-runtime-parent/pom.xml  -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2"
+ 
+    - script:
+        name: commit to release branch
+        code: |-
+             git add .
+             git commit -m "Next development cycle"
+
+# End of deploy
+
+    - script:
+        name: get back to the develop branch
+        code: |-
+             git checkout develop
+
+    - script:
+        name: merge the version back into develop
+        code: |-
+             git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION
+
+
+    - script:
+        name: git checkout master
+        code: |-
+             git checkout -b master origin/master
+
+
+    - script:
+        name: merge the version back into master but the tagged version instead of the release/v0.1 HEAD
+        code: |-
+             git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION~1
+
+    - script:
+        name: draw git
+        code: |-
+             git log --graph --oneline --all
+
+
+    - script:
+        name: delete release branch
+        code: |-
+             git branch -D release/v$VERSION_FROM_POM_BASE_VERSION
+
+    - script:
+        name: delete builder branch
+        code: |-
+             git branch -D wercker_$WERCKER_RUN_ID
+
+
+    - script:
+        name: push everything
+        code: |-
+             git push origin --all
+             git push origin --tags
+
