--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
         <relativePath>epsilon-runtime-parent</relativePath>
     </parent>
     <artifactId>epsilon-runtime-reactor</artifactId>
