--- a/wercker.yml
+++ b/wercker.yml
@@ -13,11 +13,11 @@ build:
     - wercker/maven:
       goals: versions:set
       pom: ./epsilon-runtime-parent/pom.xml
-      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}-${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}-${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
+      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION}_${VERSION_FROM_GIT_TAG_CURRENT_BRANCH_VALID_NAME}-${VERSION_FROM_GIT_TAG_COMMIT_COUNT}
       cache_repo: true
 
     - wercker/maven:
-      goals: clean install
+      goals: clean deploy
       settings: .maven.xml
       profiles: release-github,release-blackbelt
       cache_repo: true
