--- a/epsilon-runtime-utils/pom.xml
+++ b/epsilon-runtime-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
-        <version>1.1.5</version>
+        <version>1.1.6-SNAPSHOT</version>
         <relativePath>../epsilon-runtime-parent</relativePath>
     </parent>
     <artifactId>epsilon-runtime-utils</artifactId>
