Transfer to test

--- a/epsilon-runtime-execution/pom.xml
+++ b/epsilon-runtime-execution/pom.xml
@@ -17,5 +17,12 @@
             <groupId>hu.blackbelt.epsilon</groupId>
             <artifactId>epsilon-runtime-utils</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+            <version>1.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
