--- a/epsilon-runtime-osgi/pom.xml
+++ b/epsilon-runtime-osgi/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>epsilon-runtime-osgi</artifactId>
     <packaging>bundle</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>hu.blackbelt.epsilon</groupId>
