--- a/epsilon-runtime-utils/pom.xml
+++ b/epsilon-runtime-utils/pom.xml
@@ -10,4 +10,14 @@
     </parent>
     <artifactId>epsilon-runtime-utils</artifactId>
     <packaging>bundle</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
  </project>
