--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,34 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>3.3.0</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <instructions>
+                            <Export-Package>
+                                hu.blackbelt.epsilon.runtime.*;version=${project.version}
+                            </Export-Package>
+                            <Import-Package>
+                                !lombok,
+                                com.google.common.base;version="[14.0,30)",
+                                com.google.common.cache;version="[14.0,30)",
+                                com.google.common.collect;version="[14.0,30)",
+                                com.google.common.io;version="[14.0,30)",
+                                com.google.common.primitives;version="[14.0,30)",
+                                com.google.common.hash;version="[14.0,30)",
+                                com.google.common.util.concurrent;version="[14.0,30)",
+                                javax.annotation;version="[1.0,2)",
+                                *
+                            </Import-Package>
+                            <Include-Resource>{maven-resources}</Include-Resource>
+                        </instructions>
+                    </configuration>
+                </plugin>
+
+
+                <plugin>
                     <groupId>org.apache.karaf.tooling</groupId>
                     <artifactId>karaf-maven-plugin</artifactId>
                     <version>${karaf-version}</version>
@@ -122,33 +150,6 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.3.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Export-Package>
-                            hu.blackbelt.epsilon.runtime.*;version=${project.version}
-                        </Export-Package>
-                        <Import-Package>
-                            !lombok,
-                            com.google.common.base;version="[14.0,30)",
-                            com.google.common.cache;version="[14.0,30)",
-                            com.google.common.collect;version="[14.0,30)",
-                            com.google.common.io;version="[14.0,30)",
-                            com.google.common.primitives;version="[14.0,30)",
-                            com.google.common.hash;version="[14.0,30)",
-                            com.google.common.util.concurrent;version="[14.0,30)",
-                            javax.annotation;version="[1.0,2)",
-                            *
-                        </Import-Package>
-                        <Include-Resource>{maven-resources}</Include-Resource>
-                    </instructions>
-                </configuration>
-            </plugin>
-            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -288,6 +289,7 @@
     
     <profiles>
         <profile>
+            <id>modules</id>
             <activation>
                 <property>
                     <name>github_release</name>
