JNG-2234 Java 11 suppoort added to CI

--- a/wercker.yml
+++ b/wercker.yml
@@ -1,8 +1,6 @@
 box:
-      id: eu.gcr.io/judo-ng/maven
-      tag: latest
-      tag: 3.5.4-jdk-8
-      registry: https://eu.gcr.io
+  id: eu.gcr.io/judo-ng/judo-compiler
+  tag: 3.6.1-jdk11
 no-response-timeout: 15
 command-timeout: 60
 ignore-file: .gitignore
@@ -236,13 +234,12 @@ release:
       name: get github release attributes
       code: |-
         export GITHUB_RELEASE_BODY=$(cat ./.release/.releasetemplate | jq -aRs . | sed 's/"//g')
-        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_NUMBER" | jq -aRs . | sed 's/"//g')
+        export GITHUB_RELEASE_TITLE=$(echo "$VERSION_FROM_POM_BASE_VERSION" | jq -aRs . | sed 's/"//g')
         echo "Release title: $GITHUB_RELEASE_TITLE"
         echo "Release notes: $GITHUB_RELEASE_BODY"
 
     - github-create-release:
       token: $GITHUB_ACCESS_TOKEN
-      tag: $VERSION_NUMBER
+      tag: $VERSION_FROM_POM_BASE_VERSION
       title: $GITHUB_RELEASE_TITLE
       body: $GITHUB_RELEASE_BODY
-      prerelease: true
