JNG-2563 Fixing content type loading in OSGi context

--- a/epsilon-runtime-execution/pom.xml
+++ b/epsilon-runtime-execution/pom.xml
@@ -17,6 +17,15 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Import-Package>
+                            ${osgi-default-import},
+                            org.eclipse.epsilon.egl.config,
+                            *
+                        </Import-Package>
+                    </instructions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
