--- a/features/pom.xml
+++ b/features/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>hu.blackbelt.epsilon</groupId>
         <artifactId>epsilon-runtime-parent</artifactId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>features</artifactId>
     <packaging>feature</packaging>
