Fixing variable reference (warning)

--- a/pom.xml
+++ b/pom.xml
@@ -566,11 +566,11 @@
 			<distributionManagement>
 				<snapshotRepository>
 					<id>dummy-distribution</id>
-					<url>file:///tmp/${groupId}-${artifactId}-${project.version}/maven-snapshot/</url>
+					<url>file:///tmp/${project.groupId}-${project.artifactId}-${project.version}/maven-snapshot/</url>
 				</snapshotRepository>
 				<repository>
 					<id>dummy-distribution</id>
-					<url>file:///tmp/${groupId}-${artifactId}-${project.version}/maven-release/</url>
+					<url>file:///tmp/${project.groupId}-${project.artifactId}-${project.version}/maven-release/</url>
 				</repository>
 			</distributionManagement>
 		</profile>
